
libdoug_la_SOURCES += \
	components/Distribution.F90 \
	components/Distribution_elem.F90 \
	components/Distribution_assm.F90 \
	components/Partitioning.F90 \
	components/Partitioning_aggr.F90 \
	components/Partitioning_full.F90 \
	components/Preconditioner.F90 \
	components/Preconditioner_base.F90 \
	components/FinePreconditioner_complete.F90 \
	components/CoarsePreconditioner_smooth.F90 \
	components/CoarsePreconditioner_robust.F90 \
	components/CoarsePreconditioner_geometric.F90 
