
libdoug_la_SOURCES += \
	datatypes/Aggregate_mod.F90 \
	datatypes/Graph.f90 \
	datatypes/Points2D.F90 \
	datatypes/Polygon.F90 \
	datatypes/Mesh.F90 \
	datatypes/IdxMap.f90 \
	datatypes/DenseMtx.F90 \
	datatypes/Hash.f90 \
	datatypes/BHeap.f90 \
	datatypes/Vect.F90

libdoug_la_SOURCES += \
	datatypes/SpMtx/SpMtx_class.F90 \
	datatypes/SpMtx/SpMtx_util.f90 \
	datatypes/SpMtx/SpMtx_arrangement.F90 \
	datatypes/SpMtx/SpMtx_op_Ax.f90 \
	datatypes/SpMtx/SpMtx_op_AB.f90 \
	datatypes/SpMtx/SpMtx_op_block.f90 \
	datatypes/SpMtx/SpMtx_permutation.f90 \
	datatypes/SpMtx/SpMtx_operation.F90 \
	datatypes/SpMtx/SpMtx_generator.f90 \
	datatypes/SpMtx/SpMtx.f90 \
	datatypes/SpMtx/CoarseMtx.F90 \
	datatypes/SpMtx/RobustCoarseMtx.f90 \
	datatypes/SpMtx/CoarseGrid.F90 \
	datatypes/SpMtx/CoarseAllgathers.F90 \
	datatypes/SpMtx/GeomInterp.f90 \
	datatypes/SpMtx/CreateRestrict.F90 \
	datatypes/SpMtx/TransmitCoarse.F90 \
	datatypes/SpMtx/CreateCoarse.f90 \
	datatypes/SpMtx/SpMtx_aggregation.F90

EXTRA_DIST += \
	datatypes/SpMtx/SpMtx_arrange_qs.F90

libdoug_la_SOURCES += \
	datatypes/ElemMtxs/ElemMtxs_base.F90 \
	datatypes/ElemMtxs/ElemMtxs_assemble.F90 \
	datatypes/ElemMtxs/ElemMtxs_distribute.F90 \
	datatypes/ElemMtxs/ElemMtxs.f90

